--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 	<title>The Stena</title>
 	<meta name="description" content="Startup HTML Optimized">
 	<meta name="viewport" content="width=device-width">
-	<link rel="icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/app.min.css?v=1">
-	<meta property="og:image" content="i
-	<script src="js/app.min.js" defer></script>
 
 </head>
 
@@ -47,46 +44,190 @@
 
 	<section class="table">
 		<div class="table__container container">
-			<div class="table__item gold"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
+			<div class="table__item gold">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
 			<div class="table__item empty"></div>
-			<div class="table__item gold"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
+			<div class="table__item gold">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
 			<div class="table__item empty"></div>
-			<div class="table__item gold"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
+			<div class="table__item gold">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
 			<div class="table__item empty"></div>
-			<div class="table__item gold"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
+			<div class="table__item gold">
+			<a class="tooltip">Free!<
+				span class="tooltiptext">Free!</span>
+			</a>
+		</div>
 			<div class="table__item copyright">THE-STENA © 2020<br>2021-04-13 13:30</div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
-			<div class="table__item"><a class="tooltip">Free!<span class="tooltiptext">Free!</span></a></div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a><
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
+			<div class="table__item">
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
+			</a>
+		</div>
 		</div>		
 	</section>
 
