--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 		</div>
 			<div class="table__item empty"></div>
 			<div class="table__item gold">
-			<a class="tooltip">Free!<
-				span class="tooltiptext">Free!</span>
+			<a class="tooltip">Free!
+				<span class="tooltiptext">Free!</span>
 			</a>
 		</div>
 			<div class="table__item copyright">THE-STENA © 2020<br>2021-04-13 13:30</div>
