--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Startup HTML Optimized">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/app.min.css?v=1">
+	<script src="js/app.min.js" defer></script>
 
 </head>
 
@@ -21,7 +22,7 @@
 					<a href="#">&larr; NOW &rarr;</a>
 					<a href="#">13:30</a>
 				</div>
-				<div class="header__text--description">
+				<!-- <div class="header__text--description">
 					<p>Сервис TheStena предоставляет возможность бесплатного и платного размещения вашего сообщения на кирпичах в стене. Существуют обычные и золотые кирпичи. В обычных кирпичах есть возможность бесплатного размещения сообщения, а также платного удаления/размещения своего сообщения
 						Золотые кирпичи наверху стены являются вип кирпичами, платные сообщения с которых невозможно удалить другим пользователям. Сообщения на всех кирпичах проекта TheStena остаются навсегда.
 					</p>
@@ -30,14 +31,16 @@
 					<a href="https://freekassa.ru/" target="_blank">
 						<img src="img/free-kass.png" alt="Мы принимаем Free-Kassa">
 					</a>
-				</div>
+				</div> -->
 				<div class="header__text--info">
-					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt fugit deleniti quia quam culpa ipsa quis labore quasi obcaecati?</p>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt fugit deleniti quia quam
+						culpa ipsa quis labore quasi obcaecati?</p>
 				</div>
 			</div>
 			<div class="header__tower">
 				<img src="img/tower.png" alt="Башня">
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt fugit deleniti quia quam culpa ipsa quis labore quasi obcaecati?</p>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga nesciunt fugit deleniti quia quam
+					culpa ipsa quis labore quasi obcaecati?</p>
 			</div>
 		</div>
 	</header>
@@ -45,192 +48,211 @@
 	<section class="table">
 		<div class="table__container container">
 			<div class="table__item gold">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item empty"></div>
 			<div class="table__item gold">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item empty"></div>
 			<div class="table__item gold">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item empty"></div>
 			<div class="table__item gold">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item copyright">THE-STENA © 2020<br>2021-04-13 13:30</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a><
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
-		</div>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 			<div class="table__item">
-			<a class="tooltip">Free!
-				<span class="tooltiptext">Free!</span>
-			</a>
+				<a class="tooltip">Free!
+					<span class="tooltiptext">Free!</span>
+				</a>
+			</div>
 		</div>
-		</div>		
 	</section>
+
+	<footer class="footer">
+		<div class="footer__container container">
+			<div class="footer__description">
+				<p>Сервис TheStena предоставляет возможность бесплатного и платного размещения вашего сообщения на
+					кирпичах в стене. Существуют обычные и золотые кирпичи. В обычных кирпичах есть возможность
+					бесплатного размещения сообщения, а также платного удаления/размещения своего сообщения
+					Золотые кирпичи наверху стены являются вип кирпичами, платные сообщения с которых невозможно удалить
+					другим пользователям. Сообщения на всех кирпичах проекта TheStena остаются навсегда.
+				</p>
+			</div>
+			<div class="footer__payment">
+				<a href="https://freekassa.ru/" target="_blank">
+					<img src="img/free-kass.png" alt="Мы принимаем Free-Kassa">
+				</a>
+			</div>
+		</div>
+	</footer>
 
 
 </body>
+
 </html>
